# DeepPicarMicro

./: README.md
ModelCreation/: README.md  params.py  pilotnet.py  pilotnet_depthwise.py  quant-train.py  train.py
NAS/All/: connections.py  create-cc.sh  filter_models.py  find-arena-size  find_connections.py  find_weights.py  full_size.py  params.py  pilotnet_nas.py  train_pass.py  util.py  width_check.py
NAS/Regression/: automate.sh  create-cc.sh  create_dummies.py  dnn.cpp  large_nas.py  large_nas_dw.py  params.py  util.py
Pico/: CMakeLists.txt  README.md  camera.cpp  dnn.cpp  image_provider.cpp  image_provider.h  main.cpp  model_settings.h  motor.h  pico_depthwise.cpp  pico_depthwise.h  tflmicro-cmake.patch
Pico/src/: arducam.c  arducam.h  ov2640.h
UdacitySim/: README.md  connections.py  create_video.py  drive.py  params.py  pilotnet.py  pilotnet_depthwise.py  train.py
